unpackaged/main/default/objects/Moment_Criteria__mdt/Moment_Criteria__mdt.object-meta.xml
<CustomObject>
    <label>Moment Criteria</label>
    <pluralLabel>Moment Criteria</pluralLabel>
</CustomObject>