unpackaged/main/default/objects/Moment_Criteria__mdt/fields/Calculation__c.field-meta.xml
<CustomField>
    <fullName>Calculation__c</fullName>
    <label>Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Count All</fullName>
            </value>
            <value>
                <fullName>Count First</fullName>
            </value>
            <value>
                <fullName>Count Last</fullName>
            </value>
            <value>
                <fullName>Max</fullName>
            </value>
            <value>
                <fullName>Sum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>