unpackaged/main/default/objects/Moment_Criteria__mdt/fields/Include_in_MTA__c.field-meta.xml
<CustomField>
    <fullName>Include_in_MTA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in MTA</label>
    <type>Checkbox</type>
</CustomField>