unpackaged/main/default/objects/Moment_Criteria__mdt/fields/Journey_Category__c.field-meta.xml
<CustomField>
    <fullName>Journey_Category__c</fullName>
    <label>Journey Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Other Marketing</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
                <isActive>false</isActive>
                <label>Demo</label>
            </value>
            <value>
                <fullName>Website Engagement</fullName>
                <isActive>false</isActive>
                <label>Website Engagement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>