unpackaged/main/default/objects/Moment_Criteria__mdt/fields/Moment_Type__c.field-meta.xml
<CustomField>
    <fullName>Moment_Type__c</fullName>
    <label>Moment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Champify Alert</fullName>
            </value>
            <value>
                <fullName>Content Download</fullName>
            </value>
            <value>
                <fullName>Demo Request</fullName>
            </value>
            <value>
                <fullName>Form Submission</fullName>
            </value>
            <value>
                <fullName>Koala Intent Signal</fullName>
            </value>
            <value>
                <fullName>Live Event - Hackathon</fullName>
            </value>
            <value>
                <fullName>Live Event - Retool Hosted</fullName>
            </value>
            <value>
                <fullName>Live Event - Tradeshow</fullName>
            </value>
            <value>
                <fullName>Live Event - Other</fullName>
            </value>
            <value>
                <fullName>Product Action</fullName>
            </value>
            <value>
                <fullName>Product Signup</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Webinar - Live</fullName>
            </value>
            <value>
                <fullName>Webinar - Recorded</fullName>
            </value>
            <value>
                <fullName>Regie.ai - Started</fullName>
            </value>
            <value>
                <fullName>Regie.ai - Conversion</fullName>
            </value>
            <value>
                <fullName>Regie.ai - Expansion</fullName>
            </value>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
            <value>
                <fullName>Campaign Other</fullName>
                <isActive>false</isActive>
                <label>Campaign Other</label>
            </value>
            <value>
                <fullName>Endgame Alert</fullName>
                <isActive>false</isActive>
                <label>Endgame Alert</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>