unpackaged/main/default/objects/Moment_Criteria__mdt/listViews/Moment_Criteria.listView-meta.xml
<ListView>
    <fullName>Moment_Criteria</fullName>
    <columns>Type__c</columns>
    <columns>Journey_Category__c</columns>
    <columns>Journey_Subcategory__c</columns>
    <columns>Moment_Type__c</columns>
    <columns>Journey__c</columns>
    <columns>Include_in_MTA__c</columns>
    <columns>Calculation__c</columns>
    <columns>Active__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>Moment Criteria</label>
    <language>en_US</language>
</ListView>